// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<withPropsOnChange(Navigation)>
  <NavigationLink
    to="/admin/moderate/pending"
  >
    <ForwardRef(forwardRef)>
      access_time
    </ForwardRef(forwardRef)>
    <Localized
      id="moderate-navigation-pending"
    >
      <span>
        Pending
      </span>
    </Localized>
  </NavigationLink>
  <NavigationLink
    to="/admin/moderate/unmoderated"
  >
    <ForwardRef(forwardRef)>
      forum
    </ForwardRef(forwardRef)>
    <Localized
      id="moderate-navigation-unmoderated"
    >
      <span>
        Unmoderated
      </span>
    </Localized>
  </NavigationLink>
  <NavigationLink
    to="/admin/moderate/approved"
  >
    <ForwardRef(forwardRef)>
      check_circle
    </ForwardRef(forwardRef)>
    <Localized
      id="moderate-navigation-approved"
    >
      <span>
        Approved
      </span>
    </Localized>
  </NavigationLink>
  <NavigationLink
    to="/admin/moderate/rejected"
  >
    <ForwardRef(forwardRef)>
      cancel
    </ForwardRef(forwardRef)>
    <Localized
      id="moderate-navigation-rejected"
    >
      <span>
        Rejected
      </span>
    </Localized>
  </NavigationLink>
</withPropsOnChange(Navigation)>
`;

exports[`renders correctly with counts 1`] = `
<withPropsOnChange(Navigation)>
  <NavigationLink
    to="/admin/moderate/reported"
  >
    <ForwardRef(forwardRef)>
      flag
    </ForwardRef(forwardRef)>
    <Localized
      id="moderate-navigation-reported"
    >
      <span>
        Reported
      </span>
    </Localized>
    <withPropsOnChange(Counter)
      data-testid="moderate-navigation-reported-count"
    >
      <Localized
        $count={4}
        id="moderate-navigation-comment-count"
      >
        4
      </Localized>
    </withPropsOnChange(Counter)>
  </NavigationLink>
  <NavigationLink
    to="/admin/moderate/pending"
  >
    <ForwardRef(forwardRef)>
      access_time
    </ForwardRef(forwardRef)>
    <Localized
      id="moderate-navigation-pending"
    >
      <span>
        Pending
      </span>
    </Localized>
    <withPropsOnChange(Counter)
      data-testid="moderate-navigation-pending-count"
    >
      <Localized
        $count={0}
        id="moderate-navigation-comment-count"
      >
        0
      </Localized>
    </withPropsOnChange(Counter)>
  </NavigationLink>
  <NavigationLink
    to="/admin/moderate/unmoderated"
  >
    <ForwardRef(forwardRef)>
      forum
    </ForwardRef(forwardRef)>
    <Localized
      id="moderate-navigation-unmoderated"
    >
      <span>
        Unmoderated
      </span>
    </Localized>
    <withPropsOnChange(Counter)
      data-testid="moderate-navigation-unmoderated-count"
    >
      <Localized
        $count={3}
        id="moderate-navigation-comment-count"
      >
        3
      </Localized>
    </withPropsOnChange(Counter)>
  </NavigationLink>
  <NavigationLink
    to="/admin/moderate/approved"
  >
    <ForwardRef(forwardRef)>
      check_circle
    </ForwardRef(forwardRef)>
    <Localized
      id="moderate-navigation-approved"
    >
      <span>
        Approved
      </span>
    </Localized>
  </NavigationLink>
  <NavigationLink
    to="/admin/moderate/rejected"
  >
    <ForwardRef(forwardRef)>
      cancel
    </ForwardRef(forwardRef)>
    <Localized
      id="moderate-navigation-rejected"
    >
      <span>
        Rejected
      </span>
    </Localized>
  </NavigationLink>
</withPropsOnChange(Navigation)>
`;
